big renderer update

--- a/test/router-basic/index.html
+++ b/test/router-basic/index.html
@@ -1,1 +1,1 @@
-<app app="myApp"><router><scene name="home" route="/" default="true"><h1>home</h1></scene><scene name="about" route="/about"><h1>about</h1></scene><scene name="users" route="/users"><h1>users</h1></scene></router></app><script src="dist/main.js"></script>
+<app app="myApp"><router><div class="home" scene="home" route="/" default="true"><h1>home</h1></div><div class="about" scene="about" route="/about"><h1>about</h1></div><div class="users" scene="users" route="/users"><h1>users</h1></div></router></app><script src="dist/main.js"></script>
